--- a/Project2_starter_code.ipynb
+++ b/Project2_starter_code.ipynb
@@ -20,7 +20,7 @@
    "id": "20e76b52",
    "metadata": {},
    "source": [
-    "# Step 0: Download the data"
+    "# Step 0: Download the data\n"
    ]
   },
   {
@@ -97,7 +97,7 @@
    "id": "9d634db5",
    "metadata": {},
    "source": [
-    "# Step 1: Deconvolve the data"
+    "# Step 1: Deconvolve the data\n"
    ]
   },
   {
@@ -115,7 +115,7 @@
    "id": "131d64a6",
    "metadata": {},
    "source": [
-    "# Step 2: Perform clustering "
+    "# Step 2: Perform clustering\n"
    ]
   },
   {
@@ -133,7 +133,7 @@
    "id": "652a8830",
    "metadata": {},
    "source": [
-    "# Step 2bis: Predict on the test data"
+    "# Step 2bis: Predict on the test data\n"
    ]
   },
   {
@@ -151,7 +151,7 @@
    "id": "d2cc8182",
    "metadata": {},
    "source": [
-    "# Step 3: Save the required files"
+    "# Step 3: Save the required files\n"
    ]
   },
   {
@@ -262,7 +262,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "ml4g-proj-2",
    "language": "python",
    "name": "python3"
   },
@@ -276,7 +276,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
