temporarily hard coded directories due to working directory problems

--- a/code/deconv_task.ipynb
+++ b/code/deconv_task.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,11 +36,11 @@
     "\n",
     "\n",
     "# Paths train data for deconv\n",
-    "X_train_bulk_path = \"data/deconv/train/train_bulk.csv\"\n",
-    "y_train_bulk_path = \"data/deconv/train/train_bulk_trueprops.csv\"\n",
+    "X_train_bulk_path = '/Users/mikael/Documents/ETHZ/Courses/S3_Autumn_2024/ML_Genomics/projects/project_2/ml4g-proj-2/data/deconv/train/train_bulk.csv'\n",
+    "y_train_bulk_path = '/Users/mikael/Documents/ETHZ/Courses/S3_Autumn_2024/ML_Genomics/projects/project_2/ml4g-proj-2/data/deconv/train/train_bulk_trueprops.csv'\n",
     "\n",
     "# Path test data for deconv\n",
-    "X_test_bulk_path = \"data/deconv/test/bulkified_data.csv\"\n",
+    "X_test_bulk_path = '/Users/mikael/Documents/ETHZ/Courses/S3_Autumn_2024/ML_Genomics/projects/project_2/ml4g-proj-2/data/deconv/test/bulkified_data.csv'\n",
     "\n",
     "# Load and prepare train data\n",
     "X_train_bulk = pd.read_csv(X_train_bulk_path).set_index('Unnamed: 0').T\n",
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +447,7 @@
        "[9 rows x 21 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -459,38 +459,38 @@
     "bulk_samples = X_test_bulk.index.tolist()  # List of bulk sample names\n",
     "\n",
     "# Create the DataFrame with the original order\n",
-    "deconv_submission_df = pd.DataFrame(\n",
+    "pred_props = pd.DataFrame(\n",
     "    y_test_pred.T,  # Transpose to have cell types as rows and bulk samples as columns\n",
     "    columns=bulk_samples,  # Bulk sample names as columns\n",
     "    index=initial_order     # Original cell type order as rows\n",
     ")\n",
     "\n",
     "# Reorder rows to match the desired order of cell types\n",
-    "deconv_submission_df = deconv_submission_df.reindex(desired_order)\n",
+    "pred_props = pred_props.reindex(desired_order)\n",
     "\n",
     "# Add an unnamed index column starting from 0\n",
-    "deconv_submission_df.reset_index(inplace=True)\n",
-    "deconv_submission_df.index.name = \"\"  # Ensure the index column has no name\n",
-    "deconv_submission_df"
+    "pred_props.reset_index(inplace=True)\n",
+    "pred_props.index.name = \"\"  # Ensure the index column has no name\n",
+    "pred_props"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Submission file saved to: submission/pred_props_deconv.csv\n"
+      "Submission file saved to: /Users/mikael/Documents/ETHZ/Courses/S3_Autumn_2024/ML_Genomics/projects/project_2/ml4g-proj-2/submission/pred_props.csv\n"
      ]
     }
    ],
    "source": [
     "# Save the DataFrame to a CSV file in the required format\n",
-    "sub_decon_path = \"submission/pred_props_deconv.csv\"\n",
-    "deconv_submission_df.to_csv(sub_decon_path, index=True, index_label=\"\")  # Add unnamed index column\n",
+    "sub_decon_path = \"/Users/mikael/Documents/ETHZ/Courses/S3_Autumn_2024/ML_Genomics/projects/project_2/ml4g-proj-2/submission/pred_props.csv\"\n",
+    "pred_props.to_csv(sub_decon_path, index=True, index_label=\"\")  # Add unnamed index column\n",
     "print(f\"Submission file saved to: {sub_decon_path}\")"
    ]
   },
@@ -505,12 +505,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "# load as reference\n",
-    "all_bulkified = pd.read_csv(\"data/deconv/test/bulkified_data.csv\",index_col=0)"
+    "all_bulkified = pd.read_csv(\"/Users/mikael/Documents/ETHZ/Courses/S3_Autumn_2024/ML_Genomics/projects/project_2/ml4g-proj-2/data/deconv/test/bulkified_data.csv\",index_col=0)"
    ]
   },
   {
@@ -527,30 +527,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert all(deconv_submission_df.columns == np.append([\"index\"],all_bulkified.columns)), \"Wrong columns\""
+    "assert all(pred_props.columns == np.append([\"index\"],all_bulkified.columns)), \"Wrong columns\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert all(deconv_submission_df['index']== ['T', 'Endothelial', 'Fibroblast', 'Plasmablast', 'B', 'Myofibroblast',\n",
+    "assert all(pred_props['index']== ['T', 'Endothelial', 'Fibroblast', 'Plasmablast', 'B', 'Myofibroblast',\n",
     "       'NK', 'Myeloid', 'Mast']), \"Wrong order for cell types\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert all(deconv_submission_df.drop(\"index\",axis=1).sum().round()==1), \"The proportions for a single patient must sum to 1\""
+    "assert all(pred_props.drop(\"index\",axis=1).sum().round()==1), \"The proportions for a single patient must sum to 1\""
    ]
   },
   {
