--- a/code/cluster_task.ipynb
+++ b/code/cluster_task.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,9 +38,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'train_adata' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNumber of cells in the train set \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[43mtrain_adata\u001b[49m\u001b[38;5;241m.\u001b[39mn_obs\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m spl \u001b[38;5;129;01min\u001b[39;00m train_adata\u001b[38;5;241m.\u001b[39mobs\u001b[38;5;241m.\u001b[39mSample\u001b[38;5;241m.\u001b[39munique():\n\u001b[1;32m      3\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNumber of cells for \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mspl\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m is \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtrain_adata[train_adata\u001b[38;5;241m.\u001b[39mobs\u001b[38;5;241m.\u001b[39mSample\u001b[38;5;241m==\u001b[39mspl]\u001b[38;5;241m.\u001b[39mn_obs\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'train_adata' is not defined"
+     ]
+    }
+   ],
    "source": [
     "print(f\"Number of cells in the train set {train_adata.n_obs}\")\n",
     "for spl in train_adata.obs.Sample.unique():\n",
@@ -85,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -165,14 +177,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/tp/l4sw2ybd7t3b9gbsrzngsn6w0000gn/T/ipykernel_39378/3985071899.py:2: FutureWarning: Use anndata.concat instead of AnnData.concatenate, AnnData.concatenate is deprecated and will be removed in the future. See the tutorial for concat at: https://anndata.readthedocs.io/en/latest/concatenation.html\n",
+      "/var/folders/tp/l4sw2ybd7t3b9gbsrzngsn6w0000gn/T/ipykernel_40333/3985071899.py:2: FutureWarning: Use anndata.concat instead of AnnData.concatenate, AnnData.concatenate is deprecated and will be removed in the future. See the tutorial for concat at: https://anndata.readthedocs.io/en/latest/concatenation.html\n",
       "  combined_train_adata = train_subset.concatenate(\n"
      ]
     }
@@ -189,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -202,14 +214,14 @@
       "  warnings.warn(\n",
       "/Users/mikael/miniconda3/envs/ml4g-proj-2/lib/python3.10/site-packages/scanpy/preprocessing/_scale.py:318: UserWarning: Received a view of an AnnData. Making a copy.\n",
       "  view_to_actual(adata)\n",
-      "2024-12-03 22:54:35,352 - harmonypy - INFO - Computing initial centroids with sklearn.KMeans...\n",
-      "2024-12-03 22:54:39,191 - harmonypy - INFO - sklearn.KMeans initialization complete.\n",
-      "2024-12-03 22:54:39,226 - harmonypy - INFO - Iteration 1 of 10\n",
-      "2024-12-03 22:54:41,309 - harmonypy - INFO - Iteration 2 of 10\n",
-      "2024-12-03 22:54:44,027 - harmonypy - INFO - Iteration 3 of 10\n",
-      "2024-12-03 22:54:45,918 - harmonypy - INFO - Iteration 4 of 10\n",
-      "2024-12-03 22:54:47,921 - harmonypy - INFO - Iteration 5 of 10\n",
-      "2024-12-03 22:54:49,170 - harmonypy - INFO - Converged after 5 iterations\n"
+      "2024-12-03 23:35:43,088 - harmonypy - INFO - Computing initial centroids with sklearn.KMeans...\n",
+      "2024-12-03 23:35:46,495 - harmonypy - INFO - sklearn.KMeans initialization complete.\n",
+      "2024-12-03 23:35:46,537 - harmonypy - INFO - Iteration 1 of 10\n",
+      "2024-12-03 23:35:48,870 - harmonypy - INFO - Iteration 2 of 10\n",
+      "2024-12-03 23:35:51,962 - harmonypy - INFO - Iteration 3 of 10\n",
+      "2024-12-03 23:35:54,242 - harmonypy - INFO - Iteration 4 of 10\n",
+      "2024-12-03 23:35:56,952 - harmonypy - INFO - Iteration 5 of 10\n",
+      "2024-12-03 23:35:59,037 - harmonypy - INFO - Converged after 5 iterations\n"
      ]
     }
    ],
@@ -291,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +312,7 @@
      "text": [
       "/Users/mikael/miniconda3/envs/ml4g-proj-2/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "/var/folders/tp/l4sw2ybd7t3b9gbsrzngsn6w0000gn/T/ipykernel_39378/675672251.py:8: FutureWarning: In the future, the default backend for leiden will be igraph instead of leidenalg.\n",
+      "/var/folders/tp/l4sw2ybd7t3b9gbsrzngsn6w0000gn/T/ipykernel_40333/1051185770.py:11: FutureWarning: In the future, the default backend for leiden will be igraph instead of leidenalg.\n",
       "\n",
       " To achieve the future defaults please pass: flavor=\"igraph\" and n_iterations=2.  directed must also be False to work with igraph's implementation.\n",
       "  sc.tl.leiden(combined_train_adata, resolution=1.0)\n"
@@ -323,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +482,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.15"
   }
  },
  "nbformat": 4,
